add activity_main2 for details, add new tab_control_clicked_bg, and add some code to home fragment

--- a/app/src/main/res/layout/fragment_home_manga.xml
+++ b/app/src/main/res/layout/fragment_home_manga.xml
@@ -45,7 +45,7 @@
             android:layout_alignTop="@id/welcome"
             android:layout_marginTop="45dp"
             android:layout_marginRight="-70dp"
-            android:background="@drawable/tab_control_bg"
+            android:background="@drawable/tab_control_clicked_bg"
             android:text="Manga"
             android:textColor="@color/white"
             android:textSize="20sp"/>
