--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="darkBlue">#1F2937</color>
     <color name="lightBlue">#374151</color>
+    <color name="blue">#027DB4</color>
 </resources>
