--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/darkBlue"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity2">
 
 
     <androidx.appcompat.widget.Toolbar
@@ -15,7 +15,7 @@
         android:layout_marginTop="20dp"
         android:background="@color/darkBlue"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintBottom_toTopOf="@id/frameLayout"
+        app:layout_constraintBottom_toTopOf="@id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
         app:titleMarginStart="30dp" />
 
     <FrameLayout
-        android:id="@+id/frameLayout"
+        android:id="@+id/frameLayout2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/bottomNav"
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="AnimeDXD"
-        app:layout_constraintStart_toEndOf="@id/logo"
+        app:layout_constraintStart_toEndOf="@id/back"
         app:layout_constraintTop_toTopOf="@id/toolBar"
         app:layout_constraintBottom_toBottomOf="@id/toolBar"
         android:layout_marginStart="40px"
@@ -60,13 +60,14 @@
         tools:layout_editor_absoluteY="16dp" />
 
     <ImageView
-        android:id="@+id/logo"
-        android:layout_width="58dp"
-        android:layout_height="51dp"
+        android:id="@+id/back"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintStart_toStartOf="@id/toolBar"
         app:layout_constraintTop_toTopOf="@id/toolBar"
         app:layout_constraintBottom_toBottomOf="@id/toolBar"
-        app:srcCompat="@drawable/logoasli"
+        app:srcCompat="@drawable/baseline_arrow_back_24"
         tools:layout_editor_absoluteY="4dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
