--- a/app/src/main/res/layout/fragment_home_news.xml
+++ b/app/src/main/res/layout/fragment_home_news.xml
@@ -27,7 +27,7 @@
             android:id="@+id/tabNews"
             android:layout_width="120dp"
             android:layout_height="70dp"
-            android:background="@drawable/tab_control_bg"
+            android:background="@drawable/tab_control_clicked_bg"
             android:layout_alignParentLeft="true"
             android:layout_alignTop="@id/welcome"
             android:layout_marginTop="45dp"
