--- a/app/src/main/res/layout/noragami_fragment_detail.xml
+++ b/app/src/main/res/layout/noragami_fragment_detail.xml
@@ -147,7 +147,8 @@
             android:ellipsize="end"
             android:maxLines="3"
             android:text="In times of need, if you look in the right place..."
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"
+            android:justificationMode="inter_word" />
 
         <TextView
             android:id="@+id/btnReadMoreSynopsis"
