--- a/app/src/main/res/layout/spy_x_family_fragment_detail.xml
+++ b/app/src/main/res/layout/spy_x_family_fragment_detail.xml
@@ -150,7 +150,8 @@
             android:ellipsize="end"
             android:maxLines="3"
             android:text="For the agent known as 'Twilight,' no order is too tall..."
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"
+            android:justificationMode="inter_word" />
 
         <TextView
             android:id="@+id/btnReadMoreSynopsis"
