--- a/app/src/main/res/drawable/review_card_background.xml
+++ b/app/src/main/res/drawable/review_card_background.xml
@@ -1,6 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="8dp"/>
-    <solid android:color="#D4A017"/>
-    <padding android:left="16dp" android:right="16dp" android:top="8dp" android:bottom="8dp"/>
+    <solid android:color="#2A3B4C"/>
 </shape>
