--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
 
             <ImageView
                 android:id="@+id/logo_image"
-                android:layout_width="80dp"
+                android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_marginTop="100dp"
                 android:src="@drawable/logo2"
