--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,13 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+
+    <style name="CustomActiveIndicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="backgroundTint">@color/black</item>
+        <item name="shapeAppearanceOverlay">@style/CustomShape</item>
+    </style>
+
+    <style name="CustomShape" parent="ShapeAppearance.Material3.SmallComponent">
+        <item name="cornerSize">50%</item> <!-- bulat penuh -->
+    </style>
 </resources>
