--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="darkBlue">#1F2937</color>
     <color name="lightBlue">#374151</color>
     <color name="blue">#027DB4</color>
+    <color name="abu">#D3D3D3</color>
 </resources>
