--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,5 +8,14 @@
         <item name="colorSecondary">@color/lightBlue</item>
     </style>
 
+    <style name="CustomActiveIndicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="backgroundTint">@color/black</item>
+        <item name="shapeAppearanceOverlay">@style/CustomShape</item>
+    </style>
+
+    <style name="CustomShape" parent="ShapeAppearance.Material3.SmallComponent">
+        <item name="cornerSize">50%</item> <!-- bulat penuh -->
+    </style>
+
     <style name="Theme.AnimeDXD" parent="Base.Theme.AnimeDXD" />
 </resources>
