--- a/app/src/main/res/layout/dialog_write_review.xml
+++ b/app/src/main/res/layout/dialog_write_review.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -60,7 +61,8 @@
         android:layout_height="wrap_content"
         android:text="Post Review"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/button_background"
+        android:background="@drawable/review_button_selector"
+        app:backgroundTint="@null"
         android:textColor="#FFFFFF"
         android:paddingStart="24dp"
         android:paddingEnd="24dp"
